# service-lookup

./: .gitignore  README.md  lookup_cluster.py  main.py  pyproject.toml
.github/workflows/: integration-test.yml  pylint.yml
src/service_lookup/: clean_processes.py  config.py  kubeconfig_setup.py  kubectl_service.py  lookup_cluster.py  main.py  uri_updater.py
test-env/: README.md  k3d-config.yaml  service-mappings.json
test-env/manifests/: service-a.yaml  service-b.yaml
test-env/mock-application-properties/service-a/: application.yml
test-env/mock-application-properties/service-b/: application.yml
